[tool.poetry]
name = "lwmdb"
version = "0.1.0"
description = "lwmdb database management through Django for Living with Machines."
authors = [
  "Kalle Westerling <kalle.westerling@bl.uk>",
  "Dr Griffith Rees <grees@turing.ac.uk>",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2.3"
seaborn = "^0.12.2"
pandas = "^2.0.3"
ipython = "^8.14.0"
jupyter = "^1.0.0"
django-pandas = "^0.6.6"
django-extensions = "^3.2.3"
colorama = "^0.4.6"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
azure-storage-blob = "^12.17.0"
GDAL = {version = "3.5.3", platform = "darwin"}
whitenoise = "^6.5.0"
tqdm = "^4.65.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
django-debug-toolbar = "^4.1.0"
psutil = "5.9.4"
gunicorn = "^20.1.0"
django-anymail = "^9.2"
pyopenssl = "^23.2.0"
validators = "^0.20.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pyfakefs = "^5.2.3"
pytest-django = "^4.5.2"
Werkzeug = "^2.3.6"
pyparsing = "^3.1.0"
pydot = "^1.4.2"
pre-commit = "^3.3.3"
django-coverage-plugin = "^3.1.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
mkdocs-kroki-plugin = "^0.6.1"
alto2txt2fixture = {git = "https://github.com/living-with-machines/alto2txt2fixture.git"}

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.19"
mkdocs-literate-nav = "^0.6.0"
mkdocs-gen-files = "^0.5.0"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
mkdocs-section-index = "^0.3.5"
mkdocstrings-python = "^0.9.0"
black = "^23.7.0"
pygments = "^2.15.1"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py"]
addopts = """
--cov=lwmdb
--cov-report=term:skip-covered
--pdbcls=IPython.terminal.debugger:TerminalPdb
--doctest-modules
--ignore=compose
--ignore=jupyterhub_config.py
--ignore=notebooks
--ignore=docs
--ignore=lwmdb/contrib/sites
-m "not slow"
--durations=3
"""
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "cli: marks tests as using the command-line-interface",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203", "E501", "E731", "E713", "F821", "E712", "E266", "E711",
  "E722", "E712", "F841", "F541", "E711", "E841", "W605", "E265",
]
exclude = [
  ".tox", ".git", "*/migrations/*", "*/static/CACHE/*",
  "docs", "node_modules" , "venv"
]

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.coverage.run]
include = ["config/*"]
omit = ["*migrations*", "*tests*", "*.html"]
plugins = ["django_coverage_plugin"]

[tool.bandit]
exclude_dirs = [
  "tests", "*/migrations/*", "*/static/CACHE/*", "docs", "node_modules"
]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[too.docuformatter]
recursive = true
blank = true
pre-summary-space = true
wrap-summaries = 88
wrap-descriptions = 88
non-strict = true

[tool.pydocstyle]
convention = "google"
match = '(?!test_).*\.py'
add-ignore = [
  "D100", "D101", "D102", "D104", "D105", "D106", "D107", "D203",
  "D204", "D211", "D213"
]

[tool.mypy]
python_version = "3.11"
# check_untyped_defs = True
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
plugins = [
  "mypy_django_plugin.main",
  # Add if usig django-rest-framework API
  # "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.test_settings"

[tool.djlint]
use_gitignore=true
exclude="lwmdb/static/*"
ignore="H031"
require_pragma=true
format_css=true
format_js=true
indent=2
ignore_blocks="comment"

[tool.djlint.css]
indent_size=2

[too.djlint.js]
indent_size=2
